Update 'mdc0l8s8c-go' component image to: quay.io/rhtap_qe/rhtap-qe-go:6137b0a84af0b1c137f38420969f50ba8a5bd284@sha256:0664250f453c820ddcd39791ad26f215f1349d4046c2b8f1aecc8b6e60bce974

--- a/components/mdc0l8s8c-go/overlays/development/deployment-patch.yaml
+++ b/components/mdc0l8s8c-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: mdc0l8s8c-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-go:6137b0a84af0b1c137f38420969f50ba8a5bd284@sha256:0664250f453c820ddcd39791ad26f215f1349d4046c2b8f1aecc8b6e60bce974
+          name: container-image
